@@ -10,7 +10,8 @@ set conf_dir=%ENV_PATH%\..\conf
 set CLASSPATH=%conf_dir%
 set CLASSPATH=%conf_dir%\..\lib\*;%CLASSPATH%
 
-set JAVA_MEM_OPTS= -Xms128m -Xmx512m -XX:PermSize=128m
+set JAVA_MEM_OPTS= -Xms128m -Xmx512m -XX:MetaspaceSize=128m -XX:MaxMetaspaceSize=256m
+
 set JAVA_OPTS_EXT= -Djava.awt.headless=true -Djava.net.preferIPv4Stack=true -Dapplication.codeset=UTF-8 -Dfile.encoding=UTF-8
 set ADAPTER_OPTS= -DappName=canal-adapter
 
